--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Gui Leen <guileen@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "chokidar": "^2.0.4"
+    "chokidar": "^2.0.4",
+    "simple-git": "^2.2.0"
   }
 }
